applications/crossplane-functions/function-environment-configs/crossplane-function-egress-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: crossplane-allow-egress-to-function-environment-configs
  namespace: crossplane-system
  labels:
    rye.ninja/component: crossplane-function-networking
    rye.ninja/owner: platform-engineering
  annotations:
    ignore-check.kube-linter.io/dangling-networkpolicy: "This policy addresses a pod that is dynamically created by the provider and cannot be referenced by a static analysis of the NetworkPolicy."
    ignore-check.kube-linter.io/dangling-networkpolicypeer-podselector: "This policy addresses a pod that is dynamically created by the provider and cannot be referenced by a static analysis of the NetworkPolicy."
spec:
  podSelector:
    matchLabels:
      app: crossplane
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          pkg.crossplane.io/function: function-environment-configs
    ports:
    - protocol: TCP
      port: 9443
