applications/crossplane-functions/function-environment-configs/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: function-environment-configs-allow-ingress
  namespace: crossplane-system
  labels:
    rye.ninja/component: crossplane-function-environment-configs
    rye.ninja/owner: platform-engineering
  annotations:
    ignore-check.kube-linter.io/dangling-networkpolicy: "This policy addresses a pod that is dynamically created by the provider and cannot be referenced by a static analysis of the NetworkPolicy."
    ignore-check.kube-linter.io/dangling-networkpolicypeer-podselector: "This policy addresses a pod that is dynamically created by the provider and cannot be referenced by a static analysis of the NetworkPolicy."
spec:
  podSelector:
    matchLabels:
      pkg.crossplane.io/function: function-environment-configs
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: crossplane
    ports:
    - protocol: TCP
      port: 9443
  - ports:
    - protocol: TCP
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: function-environment-configs-allow-egress
  namespace: crossplane-system
  labels:
    rye.ninja/component: crossplane-function-environment-configs
    rye.ninja/owner: platform-engineering
  annotations:
    ignore-check.kube-linter.io/dangling-networkpolicy: "This policy addresses a pod that is dynamically created by the provider and cannot be referenced by a static analysis of the NetworkPolicy."
    ignore-check.kube-linter.io/dangling-networkpolicypeer-podselector: "This policy addresses a pod that is dynamically created by the provider and cannot be referenced by a static analysis of the NetworkPolicy."
spec:
  podSelector:
    matchLabels:
      pkg.crossplane.io/function: function-environment-configs
  policyTypes:
  - Egress
  egress:
  - {}
